addons/web/static/src/views/fields/copy_clipboard/copy_clipboard_field.scss
.o_field_CopyClipboardChar :is(span, input):not(.fa-clipboard) {
    overflow: hidden;
    text-overflow: ellipsis;
}

