[FIX] web: prevent icon overlap in CopyClipboardURL
Currently, when using the CopyClipboardURLField widget, long URL text
overflows and overlaps with the adjacent copy/link icon.

This commit fixes the issue by applying standard text truncation
(`text-truncate`) to the `.o_form_uri` element and restricting its width
to account for the adjacent icon. We also take advantage of unused white
space to display the most of the link text before the ellipsis.

task~6159185

closes odoo/odoo#262552

--- a/addons/web/static/src/views/fields/copy_clipboard/copy_clipboard_field.scss
+++ b/addons/web/static/src/views/fields/copy_clipboard/copy_clipboard_field.scss
@@ -2,3 +2,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.o_field_CopyClipboardURL {
+    .o_form_uri {
+        @include text-truncate();
+        flex: 1 1 0 !important;
+    }
+}
